Fix free spacing between outline tabs

--- a/src/components/Tabs/Tabs.module.scss
+++ b/src/components/Tabs/Tabs.module.scss
@@ -11,6 +11,11 @@
     &[data-variant="outline"] {
       border-bottom-color: var(--tabs-color);
 
+      &:not([data-active]) {
+        border-left: none;
+        border-right: none;
+      }
+
       &:where([data-active]) {
         border-color: var(--tabs-color);
         border-bottom: none;
